--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calc IMC</title>
+</head>
+<body>
+    <script>
+        //Calculando IMC
+        console.log("Calculando o IMC do Luan...");
 
+        let nomePaciente = "Luan";
+        let pesoPaciente = 62;
+        let alturaPaciente = 1.76;
+
+        let imcPaciente = pesoPaciente / (alturaPaciente * alturaPaciente);
+        console.log("O IMC do "+nomePaciente+" é: "+ imcPaciente);
+        
+        
+    </script>
+</body>
+</html>
